--- a/xprof/btx_tally_params.yaml
+++ b/xprof/btx_tally_params.yaml
@@ -12,5 +12,5 @@
     :type: integer_unsigned
   - :name: display_kernel_verbose
     :type: bool
-  - :name: backend_level
+  - :name: backend_levels
     :type: string
