Handle sync/barrier with external binary (#178)
* move to another bin

* replace kill unix with ruby

* Miscelanous fixes

* Code reuse

* Indent

* fix previous bug

---------

Co-authored-by: Thomas Applencourt <apl@anl.gov>

--- a/xprof/Makefile.am
+++ b/xprof/Makefile.am
@@ -6,11 +6,12 @@ else
   WERROR =
 endif
 
-bin_SCRIPTS = iprof
+bin_SCRIPTS = \
+	iprof \
+	sync_daemon_fs
 
-iprof: $(top_builddir)/xprof/xprof.rb
-	cp $(top_builddir)/xprof/xprof.rb $@
-	chmod a+x $@
+iprof: xprof.rb
+	cp xprof.rb $@
 
 xprof_utils.hpp: $(top_srcdir)/utils/xprof_utils.hpp
 	cp $< $@
@@ -156,16 +157,17 @@ data_DATA = \
 
 EXTRA_DIST = \
 	btx_interval_model.yaml \
-    btx_aggreg_model.yaml \
+	btx_aggreg_model.yaml \
 	btx_timeline_params.yaml \
 	btx_tally_params.yaml \
 	btx_aggreg_params.yaml \
-    interval_model.yaml \
+	interval_model.yaml \
 	$(TRACE_FILES) \
 	tests/tally.dust.erb \
 	perfetto_prunned.proto \
 	interval.c.erb \
-	interval.h.erb
+	interval.h.erb \
+	sync_daemon_fs
 
 CLEANFILES = \
 	iprof \
