--- a/xprof/xprof.rb.in
+++ b/xprof/xprof.rb.in
@@ -194,80 +194,49 @@ end
 #   |_)  _. ._ ._ o  _  ._
 #   |_) (_| |  |  | (/_ |
 #
-def count_file(folder)
-  # \ls to avoid alias. Counter `.` and `..`, so remove them
-  #  Will return -2 for a empty directory
-  stdout_str = exec("\\ls -afq #{folder}", debug: false)
-  stdout_str.lines.size - 2
-end
+class Sync_daemon
+  SIGRTMIN = 34
+  RT_SIGNAL_READY = SIGRTMIN
+  RT_SIGNAL_GLOBAL_BARRIER = SIGRTMIN + 1
+  RT_SIGNAL_LOCAL_BARRIER = SIGRTMIN + 2
+  RT_SIGNAL_FINISH = SIGRTMIN + 3
 
-FOLDER_JOBID = File.join('.thapi_lock', mpi_job_id)
-# Put the user name, to avoid permission issue for people sharing nodes
-SHARED_LOCAL_FILESYSTEM = File.join('/', 'dev', 'shm', Etc.getlogin, FOLDER_JOBID)
-SHARED_GLOBAL_FILESYSTEM = File.join(env_fetch_first('HOME'), FOLDER_JOBID)
+  def lazy_exec(&block)
+    return unless in_mpi_env?
 
-# Use a log distribution seems to be a good tradeoff
-# between being nice to the FileSystem (not too many calls)
-# but not waiting to much
-def busy_wait(&block)
-  (2..).take_while { |i| block.call && sleep(Math.log(i)) }
-end
+    Signal.trap(RT_SIGNAL_READY) do
+      return
+    end
+    block.call
+    sleep
+  end
 
-# We know the local size, and the local id
-#   Each process write a file, then we wait until all of them did it
-#
-# We cannot remove the local_path; this can lead to deadlock
-#   One process finish and remove the file,
-#   when another process is sleeping
-# Hence, each local barrier should have a unique name
-def local_barier(name)
-  LOGGER.info { "Local_barier #{name}" }
-  return unless in_mpi_env?
+  def initialize
+    LOGGER.debug { 'Init Sync_daemon' }
+    lazy_exec do
+      @pid = spawn("#{__dir__}/sync_daemon_fs #{Process.pid}")
+    end
+  end
 
-  folder = File.join(SHARED_LOCAL_FILESYSTEM, name)
-  FileUtils.mkdir_p(File.join(folder, mpi_local_rank_id.to_s))
-  busy_wait { count_file(folder) != mpi_local_size }
-end
+  def finalize
+    lazy_exec do
+      `kill -#{RT_SIGNAL_FINISH} #{@pid}`
+    end
+  end
 
-# We don't know the total number of ranks
-#   -`PALS_NRANKS` looks interesting but is not exported by default
-#   - We may want to call `MPI_INIT()` our self, but that mean liking against MPI
-#     making it a pain to install / configure THAPI
-# We don't know either how many local masters we have
-#   - MPI is not required to round-robin process between hosts
-#   - We cannot use `PBS_NODEFILE`, as people can request N nodes, but launch <N process
-#
-# At the beginning of the script, each master will create a folder.
-# Then, when hitting the barrier, each local master will remove his file
-#  and wait until no more folders exist.
-#
-# This is racy! If one thread exits the barrier before any other enters it,
-#    this thread will pass the barrier.
-# We rely/We hope, that user will call an MPI_Barrier() && that we do enough work...
-def init_global_barrier
-  LOGGER.info { 'Init_global_barrier' }
-  return unless in_mpi_env?
+  def local_barrier(name)
+    LOGGER.info { "Local_barrier #{name}" }
+    lazy_exec do
+      `kill -#{RT_SIGNAL_LOCAL_BARRIER} #{@pid}`
+    end
+  end
 
-  f = File.join(SHARED_GLOBAL_FILESYSTEM, mpi_rank_id.to_s)
-  FileUtils.mkdir_p(f)
-  f
-end
-
-def global_barrier(f)
-  LOGGER.info { 'Global_barrier' }
-  return unless in_mpi_env?
-
-  # Block until all the process have removed their sentinel,
-  #    then master will clean the folder to be nice to the user
-  #
-  # Note that `mpi_master` can see the folder empty, and hence remove it
-  #   at the same time as other threads sleep. They will wake up
-  #   and see a deleted folder.
-  # Fortunately `count_file` will return -2 for a non exciting folder
-  #   hence we test for > 0 and not `!= 0`
-  FileUtils.rm_rf(f)
-  busy_wait { count_file(SHARED_GLOBAL_FILESYSTEM) > 0 }
-  FileUtils.rm_rf(SHARED_GLOBAL_FILESYSTEM) if mpi_master?
+  def global_barrier
+    LOGGER.info { 'global_barrier' }
+    lazy_exec do
+      `kill -#{RT_SIGNAL_GLOBAL_BARRIER} #{@pid}`
+    end
+  end
 end
 
 #                        __
@@ -488,7 +457,7 @@ end
 
 # TODO: Use babeltrace_thapi as a LIB not a binary
 
-def on_node_processing(backends, global_barrier_h)
+def on_node_processing(backends, syncd)
   raise unless mpi_local_master?
 
   opts = if OPTIONS.include?(:trace)
@@ -502,8 +471,8 @@ def on_node_processing(backends, global_barrier_h)
          end
 
   if opts && OPTIONS[:analysis]
-    opts << "--output #{thapi_trace_dir_tmp}"
-    opts << "--backends #{backends.join(',')}"
+    opts << "--output #{thapi_trace_dir_tmp} "
+    opts << "--backends #{backends.join(',')} "
     exec("#{BINDIR}/babeltrace_thapi #{opts} -- #{lttng_trace_dir_tmp}")
     FileUtils.rm_f(lttng_trace_dir_tmp)
   else
@@ -512,7 +481,7 @@ def on_node_processing(backends, global_barrier_h)
   end
 
   # Global Barrier
-  global_barrier(global_barrier_h)
+  syncd.global_barrier
 
   # Replace mpi_job_id with a better name
   return unless mpi_master?
@@ -525,7 +494,7 @@ end
 # Start, Stop lttng, amd do the on-node analsysis
 def trace_and_on_node_processing(usr_argv)
   # All masters setup a future global barrier
-  global_barrier_h = init_global_barrier if mpi_local_master?
+  syncd = Sync_daemon.new
 
   # Load Tracers and APILoaders Lib
   backends, h = env_tracers
@@ -535,18 +504,18 @@ def trace_and_on_node_processing(usr_argv)
   ENV['LTTNG_HOME'] = lttng_home_dir
   # Only local master spawn LTTNG daemon and start session
   setup_lttng(backends) if mpi_local_master?
-  local_barier('waiting_for_lttng_setup')
+  syncd.local_barrier('waiting_for_lttng_setup')
   # Launch User Command
   launch_usr_bin(h, usr_argv)
 
   # We need to be sure that all the local ranks finished
   # before local master stops the lttng session
-  local_barier('waiting_for_application_ending')
+  syncd.local_barrier('waiting_for_application_ending')
   return unless mpi_local_master?
 
   teardown_lttng
   # Preprocess trace
-  on_node_processing(backends, global_barrier_h)
+  on_node_processing(backends, syncd)
 end
 
 def global_processing(folder)
@@ -598,95 +567,99 @@ end
 #   |_) _. ._ _ o ._   _    /  |   |
 #   |  (_| | _> | | | (_|   \_ |_ _|_
 #                      _|
-parser = OptionParserWithDefaultAndValidation.new
-
-# Tracing
-parser.on('-m', '--tracing-mode MODE', 'Define the category of events traced', default: 'default',
-                                                                               allowed: %w[minimal default full])
-parser.on('--traced-ranks RANK', Array, 'Select with MPI rank will be traced.',
-          'Use -1 to mean all ranks.',
-          default: Set[-1]) do |ranks|
-  ranks.map do |r|
-    if r.match?(/^\d+$/)
-      r.to_i
-    else
-      raise(OptionParser::ParseError,
-            "Invalid value (#{r}). Only integer accepted")
-    end
-  end.to_set
-end
-parser.on('--[no-]profile', 'Trigger for device activities profiling', default: true)
-parser.on('--[no-]analysis', 'Trigger for analysis', default: true)
-
-# General Options
-parser.on('-b', '--backends BACKENDS', Array, "Select which and how backends' need to handled.",
-          'Format: backend_name[:backend_level],...',
-          default: ['omp:2', 'cl:1', 'ze:1', 'cuda:1', 'hip:1'])
-
-# Analysis
-parser.on('-r', '--replay [PATH]', 'Replay traces for post-mortem analysis')
-parser.on('-t', '--trace', 'Pretty print the trace')
-parser.on('-l', '--timeline', 'Dump a timeline of the trace.',
-          "This will create a 'out.pftrace' file that can be opened in perfetto: https://ui.perfetto.dev/#!/viewer")
-## Tally Specific Options
-parser.on('-j', '--json', 'The tally will be dumped as json')
-parser.on('-e', '--extended', 'The tally will be printed for each Hostname / Process / Thread / Device')
-parser.on('-k', '--kernel-verbose',
-          'The tally will report kernels execution time with SIMD width and global/local sizes')
-parser.on('--max-name-size SIZE',
-          OptionParser::DecimalInteger,
-          'Maximum size allowed for kernels names.',
-          'Use -1 to mean no limit.', default: 80)
-
-parser.on('--metadata', 'Display trace Metadata') do
-  puts File.read(File.join(DATADIR, 'version'))
-  exit
-end
-
-parser.on('-h', '--help', 'Display this message') { print_help_and_exit(parser, exit_code: 0) }
-
-parser.on('--debug [LEVEL]', OptionParser::DecimalInteger, 'Set the Level of debug',
-          "If LEVEL is omitted the debug level with be set to #{Logger::INFO}", default: Logger::FATAL) { |d| d || Logger::INFO }
-
-def print_help_and_exit(parser, exit_code: 1)
-  puts(parser.help)
-  puts(<<~EOF
-                                                          __
-    For complaints, praises, or bug reports please use: <(o )___
-       https://github.com/argonne-lcf/THAPI              ( ._> /
-       or send email to {apl,bvideau}@anl.gov             `---'
-  EOF
-      )
-  exit(exit_code)
-end
-
-# Parsing ARGV
-print_help_and_exit(parser) if ARGV.empty?
-
-options = {}
-begin
-  parser.parse!(into: options)
-rescue StandardError => e
-  puts("ERROR: #{e}")
-  print_help_and_exit(parser)
-end
-
-options[:'backend-names'] = options[:backends].map { |name_level| name_level.split(':').first }
-OPTIONS = options.freeze
-
-# Setup Logger
-LOGGER = Logger.new($stdout)
-LOGGER.level = OPTIONS[:debug]
-LOGGER.debug(OPTIONS)
-
 def last_trace_saved
   Dir[File.join(env_fetch_first('HOME'), 'thapi-traces', 'thapi*')].max_by { |f| File.mtime(f) }
 end
 
-# Right now, `replay` means no tracing.
-# But we don't have a way of disabling post-processing
-folder = OPTIONS.include?(:replay) ? OPTIONS[:replay] || last_trace_saved : trace_and_on_node_processing(ARGV)
-if mpi_master?
-  puts("THAPI: Trace Location #{folder}")
-  global_processing(folder) if OPTIONS[:analysis]
+# Avoid load problem
+if __FILE__ == $0
+  parser = OptionParserWithDefaultAndValidation.new
+
+  # Tracing
+  parser.on('-m', '--tracing-mode MODE', 'Define the category of events traced', default: 'default',
+                                                                                 allowed: %w[minimal default full])
+  parser.on('--traced-ranks RANK', Array, 'Select with MPI rank will be traced.',
+            'Use -1 to mean all ranks.',
+            default: Set[-1]) do |ranks|
+    ranks.map do |r|
+      if r.match?(/^\d+$/)
+        r.to_i
+      else
+        raise(OptionParser::ParseError,
+              "Invalid value (#{r}). Only integer accepted")
+      end
+    end.to_set
+  end
+  parser.on('--[no-]profile', 'Trigger for device activities profiling', default: true)
+  parser.on('--[no-]analysis', 'Trigger for analysis', default: true)
+
+  # General Options
+  parser.on('-b', '--backends BACKENDS', Array, "Select which and how backends' need to handled.",
+            'Format: backend_name[:backend_level],...',
+            default: ['omp:2', 'cl:1', 'ze:1', 'cuda:1', 'hip:1'])
+
+  # Analysis
+  parser.on('-r', '--replay [PATH]', 'Replay traces for post-mortem analysis')
+  parser.on('-t', '--trace', 'Pretty print the trace')
+  parser.on('-l', '--timeline', 'Dump a timeline of the trace.',
+            "This will create a 'out.pftrace' file that can be opened in perfetto: https://ui.perfetto.dev/#!/viewer")
+  ## Tally Specific Options
+  parser.on('-j', '--json', 'The tally will be dumped as json')
+  parser.on('-e', '--extended', 'The tally will be printed for each Hostname / Process / Thread / Device')
+  parser.on('-k', '--kernel-verbose',
+            'The tally will report kernels execution time with SIMD width and global/local sizes')
+  parser.on('--max-name-size SIZE',
+            OptionParser::DecimalInteger,
+            'Maximum size allowed for kernels names.',
+            'Use -1 to mean no limit.', default: 80)
+
+  parser.on('--metadata', 'Display trace Metadata') do
+    puts File.read(File.join(DATADIR, 'version'))
+    exit
+  end
+
+  parser.on('-h', '--help', 'Display this message') { print_help_and_exit(parser, exit_code: 0) }
+
+  parser.on('--debug [LEVEL]', OptionParser::DecimalInteger, 'Set the Level of debug',
+            "If LEVEL is omitted the debug level with be set to #{Logger::INFO}", default: Logger::FATAL) { |d| d || Logger::INFO }
+
+  def print_help_and_exit(parser, exit_code: 1)
+    puts(parser.help)
+    puts(<<~EOF
+                                                            __
+      For complaints, praises, or bug reports please use: <(o )___
+         https://github.com/argonne-lcf/THAPI              ( ._> /
+         or send email to {apl,bvideau}@anl.gov             `---'
+    EOF
+        )
+    exit(exit_code)
+  end
+
+  # Parsing ARGV
+  print_help_and_exit(parser) if ARGV.empty?
+
+  options = {}
+  begin
+    parser.parse!(into: options)
+  rescue StandardError => e
+    puts("ERROR: #{e}")
+    print_help_and_exit(parser)
+  end
+
+  options[:'backend-names'] = options[:backends].map { |name_level| name_level.split(':').first }
+  OPTIONS = options.freeze
+
+  # Setup Logger
+  LOGGER = Logger.new($stdout)
+  LOGGER.level = OPTIONS[:debug]
+  LOGGER.debug(OPTIONS)
+
+  # Right now, `replay` means no tracing.
+  # But we don't have a way of disabling post-processing
+  folder = OPTIONS.include?(:replay) ? OPTIONS[:replay] || last_trace_saved : trace_and_on_node_processing(ARGV)
+  if mpi_master?
+    puts("THAPI: Trace Location #{folder}")
+    global_processing(folder) if OPTIONS[:analysis]
+  end
+
 end
