--- a/configure.ac
+++ b/configure.ac
@@ -62,6 +62,10 @@ AS_IF([test "x$using_demangle" != xyes],
 AC_ARG_ENABLE([strict], AS_HELP_STRING([--enable-strict], [Enable -Werror]), [], [enable_strict=yes])
 AM_CONDITIONAL([STRICT], [test "x$enable_strict" = xyes])
 
+AC_LANG(C++)
+AX_MPI([found_mpi=yes], [found_mpi=no])
+AM_CONDITIONAL([HAVE_MPI], [test "x$found_mpi" = xyes])
+
 PKG_CHECK_MODULES([LIBFFI], [libffi >= 3.2])
 PKG_CHECK_MODULES([BABELTRACE2], [babeltrace2 >= 2.0])
 PKG_CHECK_MODULES([LTTNG_UST], [lttng-ust >= 2.10])
