MPI daemon for symc (#180)
* MPI daemon

* Better debuging

* Add missing file

* refactoring

* better init

* start of mpi signal daemon

* rename special group vars for better conformation

* add signal handler function

* add new signal handling using sigwait

* remove old signal handlers and unused vars

* add clean exit

* actually remove the signal handlers

* fix renamed variable

* case compile time constant, replace with if-else

* for postarity, this was first (not fixing history)

---------

Co-authored-by: Thomas Applencourt <apl@anl.gov>
Co-authored-by: Nathan Nichols <8723338+nscottnichols@users.noreply.github.com>

--- a/xprof/Makefile.am
+++ b/xprof/Makefile.am
@@ -10,6 +10,13 @@ bin_SCRIPTS = \
 	iprof \
 	sync_daemon_fs
 
+if FOUND_MPI
+  bin_SCRIPTS += sync_daemon_mpi
+endif
+
+sync_daemon_mpi: $(srcdir)/sync_daemon_mpi.c
+	$(MPICC) $(CFLAGS) $< -o $@
+
 iprof: xprof.rb
 	cp xprof.rb $@
 
@@ -178,3 +185,7 @@ CLEANFILES = \
 	$(BTX_TIMELINE_GENERATED) \
 	$(BTX_TALLY_GENERATED) \
 	$(BTX_AGGREG_GENERATED)
+
+if FOUND_MPI
+  CLEANFILES += sync_daemon_mpi
+endif
