--- a/utils/babeltrace_thapi.in
+++ b/utils/babeltrace_thapi.in
@@ -4,6 +4,7 @@ $LOAD_PATH.unshift(DATADIR) if File.directory?(DATADIR)
 require 'babeltrace2'
 require 'find'
 require 'optparse_thapi'
+require 'yaml'
 
 module BTComponentClassRefinement
   refine(BT2::BTComponentClass) do
@@ -190,7 +191,7 @@ def get_components(names)
   end
 end
 
-def get_and_add_components(graph, names)
+def get_and_add_components(graph, command, names)
   get_components(names).filter_map do |nc|
     name = nc.name
     comp = nc.comp
@@ -232,7 +233,7 @@ def get_and_add_components(graph, names)
       graph.add(comp, 'timeline',
                 params: { 'output_path' => $options[:'output-path'] })
     when 'filter.utils.muxer'
-      graph.add(comp, name) if $options[:muxer]
+      graph.add(comp, name) if need_muxer(command, ARGV.first)
     else
       # `.` is not allowed in the babeltrace components name when using the CLI
       graph.add(comp, name.gsub('.', '_'))
@@ -253,13 +254,45 @@ end
 #   |_) _. ._ _ o ._   _    /  |   |
 #   |  (_| | _> | | | (_|   \_ |_ _|_
 #                      _|
+
+THAPI_METADATA_FILE = 'thapi_metadata.yaml'
+
+def raise_if_command_unvalid(command, trace)
+  y = YAML.load_file(File.join(trace, THAPI_METADATA_FILE))
+  case command
+  when 'trace'
+    raise('Cannot show the trace of an interval or aggregated trace') if %w[interval aggreg].include?(y[:type])
+  when 'timeline'
+    raise('Cannot show the trace of an aggreg trace') if %w[aggreg].include?(y[:type])
+  end
+end
+
+def need_muxer(_command, trace)
+  y = YAML.load_file(File.join(trace, THAPI_METADATA_FILE))
+  $options[:muxer] || y[:type] == 'lttng'
+end
+
+def modify_metadata(command, trace)
+  y = YAML.load_file(File.join(trace, THAPI_METADATA_FILE))
+  case command
+  when 'to_interval'
+    y[:type] = 'interval'
+  when 'to_aggreg'
+    y[:type] = 'aggreg'
+  else
+    return
+  end
+
+  File.write(File.join($options[:output], THAPI_METADATA_FILE), y.to_yaml)
+end
+
 class BabeltraceParserThapi < OptionParserWithDefaultAndValidation
   def initialize
     super
     on('-h', '--help', 'Prints this help') { print_help_and_exit(self, exit_code: 0) }
     on('-b', '--backends BACKENDS', Array, default: %w[omp cl ze cuda hip])
     on('--debug', default: false)
-    on('--[no-]muxer', default: true)
+    on('--[no-]muxer')
     on('-v', '--version', 'Print the version string') do
       puts File.read(File.join(DATADIR, 'version'))
       exit
@@ -344,8 +377,8 @@ end
 # Fix segfault
 ARGV.uniq!
 
-unless $options[:muxer]
-  # The first filter of the grap to read multiple port (aka metababael plugin)
+unless need_muxer(command, ARGV.first)
+  # The first filter of the graph need to read multiple port (aka metababael plugin)
   h = { 'cl' => 1, 'omp' => 1, 'hip' => 0, 'cuda' => 1, 'ze' => 0 }
   raise if ($options[:backends] & h.filter_map { |k, v| k if v == 0 }).empty?
 
@@ -370,7 +403,8 @@ thapi_graph = { 'tally' => ['source.ctf.fs', 'filter.utils.muxer', 'filter.inter
 graph = BT2::BTGraph.new
 
 command = 'trace_live' if command == 'trace' && $options[:live]
-comp = get_and_add_components(graph, thapi_graph[command])
+
+comp = get_and_add_components(graph, command, thapi_graph[command])
 connects(graph, comp)
 
 if $options[:debug]
@@ -383,3 +417,4 @@ if $options[:debug]
 end
 
 graph.run
+modify_metadata(command, ARGV.first)
