--- a/xprof/xprof.rb.in
+++ b/xprof/xprof.rb.in
@@ -173,8 +173,8 @@ def thapi_trace_dir_root
 
     # This is solving a consensus for the name,
     # make it simpler and only allow "rank" per job to do it
-
-    date = Time.now.strftime('%Y-%m-%d--%Hh%Mm%Ss')
+    # Use ISO8601 extended format
+    date = Time.now.strftime('%Y-%m-%dT%H:%M:%S')
     (0..).each do |i|
       prefix = i == 0 ? '' : "_#{i}"
       thapi_uuid = date + prefix
